--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
 	},
 	"dependencies": {
 		"@argent/get-starknet": "^0.1.4",
-		"@chakra-ui/react": "^1.7.3",
+		"@chakra-ui/icons": "^1.1.7",
+		"@chakra-ui/react": "^1.8.8",
 		"@emotion/cache": "^11.7.1",
-		"@emotion/react": "^11.7.1",
+		"@emotion/react": "^11.9.0",
 		"@emotion/server": "^11.4.0",
-		"@emotion/styled": "^11.6.0",
+		"@emotion/styled": "^11.8.1",
 		"@fontsource/lexend": "^4.5.1",
 		"@starknet-react/core": "^0.4.4",
 		"framer-motion": "^4.1.17",
