--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"next-seo": "^4.28.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-hook-form": "^7.30.0",
 		"react-icons": "^4.3.1",
 		"starknet": "^2.5.0",
 		"use-deep-compare-effect": "^1.8.1"
