--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,11 @@
     "sznm/react",
     "plugin:react/jsx-runtime",
     "plugin:@next/next/recommended"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "error",
+    "no-unused-vars": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/no-danger": "off"
+  }
 }
