--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,21 @@
     "plugin:@next/next/recommended"
   ],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "no-unused-vars": "off",
-    "react/jsx-props-no-spreading": "off",
-    "react/no-danger": "off"
+    "@typescript-eslint/no-unused-vars": 0,
+    "no-unused-vars": 0,
+    "react/jsx-props-no-spreading": 0,
+    "react/no-danger": 0,
+    "prettier/prettier": 0,
+    "no-console": 0,
+    "no-extra-boolean-cast": 0,
+    "react/self-closing-comp": 0,
+    "no-unneeded-ternary": 0,
+    "import/no-duplicates": 0,
+    "react-hooks/exhaustive-deps": 0,
+    "react/button-has-type": 0,
+    "react/no-array-index-key": 0,
+    "prefer-template": 0,
+    "react/jsx-no-target-blank": 0,
+    "no-nested-ternary": 0
   }
 }
