--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@fontsource/lexend": "^4.5.1",
 		"@starknet-react/core": "^0.4.4",
 		"framer-motion": "^4.1.17",
+		"fs": "^0.0.1-security",
 		"material-react-toastify": "^1.0.1",
 		"next": "^12.0.7",
 		"next-pwa": "^5.4.4",
@@ -40,7 +41,7 @@
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.30.0",
 		"react-icons": "^4.3.1",
-		"starknet": "^2.5.0",
+		"starknet": "^3.9.0",
 		"use-deep-compare-effect": "^1.8.1"
 	},
 	"devDependencies": {
