--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.30.0",
 		"react-icons": "^4.3.1",
-		"starknet": "^3.9.0",
+		"starknet": "github:FawadHa1der/starknet.js#develop",
 		"use-deep-compare-effect": "^1.8.1"
 	},
 	"devDependencies": {
