--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,9 @@
     "react/no-array-index-key": 0,
     "prefer-template": 0,
     "react/jsx-no-target-blank": 0,
-    "no-nested-ternary": 0
+    "no-nested-ternary": 0,
+    "react/destructuring-assignment": 0,
+    "prefer-destructuring": 0,
+    "react/jsx-no-bind": 0
   }
 }
