--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 	},
 	"devDependencies": {
 		"@commitlint/config-conventional": "^15.0.0",
+		"@netlify/plugin-nextjs": "^4.5.0",
 		"@types/react": "^17.0.37",
 		"commitlint": "^15.0.0",
 		"eslint": "^7.32.0",
