--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "no-nested-ternary": 0,
     "react/destructuring-assignment": 0,
     "prefer-destructuring": 0,
-    "react/jsx-no-bind": 0
+    "react/jsx-no-bind": 0,
+    "typescript-eslint/naming-convention": 0
   }
 }
