--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@starknet-react/core": "^0.4.4",
 		"framer-motion": "^4.1.17",
 		"fs": "^0.0.1-security",
+		"get-starknet": "git+https://github.com/fawadha1der/argent-x.git#develop",
 		"material-react-toastify": "^1.0.1",
 		"next": "^12.0.7",
 		"next-pwa": "^5.4.4",
