--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
-		"@argent/get-starknet": "^3.3.0",
+		"@argent/get-starknet": "git+https://github.com/fawadha1der/argent-x.git#main",
 		"@chakra-ui/icons": "^1.1.7",
 		"@chakra-ui/react": "^1.8.8",
 		"@emotion/cache": "^11.7.1",
@@ -33,7 +33,6 @@
 		"@starknet-react/core": "^0.4.4",
 		"framer-motion": "^4.1.17",
 		"fs": "^0.0.1-security",
-		"get-starknet": "git+https://github.com/fawadha1der/argent-x.git#main",
 		"material-react-toastify": "^1.0.1",
 		"next": "^12.0.7",
 		"next-pwa": "^5.4.4",
