--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
-		"get-starknet": "git+https://github.com/FawadHa1der/get-starknet.git/#master",
 		"@chakra-ui/icons": "^1.1.7",
 		"@chakra-ui/react": "^1.8.8",
 		"@emotion/cache": "^11.7.1",
@@ -30,8 +29,10 @@
 		"@emotion/server": "^11.4.0",
 		"@emotion/styled": "^11.8.1",
 		"@fontsource/lexend": "^4.5.1",
+		"ethers": "^5.6.5",
 		"framer-motion": "^4.1.17",
 		"fs": "^0.0.1-security",
+		"get-starknet": "git+https://github.com/FawadHa1der/get-starknet.git/#master",
 		"material-react-toastify": "^1.0.1",
 		"next": "^12.0.7",
 		"next-pwa": "^5.4.4",
