--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
 		"@emotion/server": "^11.4.0",
 		"@emotion/styled": "^11.8.1",
 		"@fontsource/lexend": "^4.5.1",
+		"@starknet-react/core": "^0.9.0",
 		"ethers": "^5.6.5",
 		"framer-motion": "^4.1.17",
 		"fs": "^0.0.1-security",
-		"get-starknet": "git+https://github.com/FawadHa1der/get-starknet.git/#master",
+		"get-starknet": "^1.3.1",
 		"material-react-toastify": "^1.0.1",
 		"next": "^12.0.7",
 		"next-pwa": "^5.4.4",
@@ -41,7 +42,7 @@
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.30.0",
 		"react-icons": "^4.3.1",
-		"starknet": "git+https://github.com/fawadha1der/starknet.js.git#develop",
+		"starknet": "^3.9.0",
 		"use-deep-compare-effect": "^1.8.1",
 		"web3": "^1.7.3"
 	},
